--- a/public/games/pong-game/index.html
+++ b/public/games/pong-game/index.html
@@ -7,7 +7,7 @@
         <script src="lib/phaser.min.js"></script>
         <script src="boot.js"></script>
         <script src="preload.js"></script>
-		<script src="gametitle.js"></script>
+		<script src="gameTitle.js"></script>
         <script src="game.js"></script>
         <script src="gameover.js"></script>
         <script>
